--- a/public/css/pages/cv.css
+++ b/public/css/pages/cv.css
@@ -19,9 +19,6 @@
     text-align: center;
 }
 
-.essai{
-    display: flex;
-}
 
 
 /*=====TABLETTE=====*/
@@ -32,6 +29,9 @@
     }
     .cv-background img{
         width: 60%;
+    }
+    .download img{
+        width: 20%;
     }
 }
 
@@ -44,6 +44,10 @@
     .cv-background img{
         width: 90%;
     }
+    .download img{
+        width: 30%;
+    }
+    
 }
 
 
